Fixed some layout issues on index page.

--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -151,33 +151,36 @@
     background-blend-mode: soft-light;
     background-repeat: no-repeat;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
+    align-items: center;
+    justify-content: flex-end;
 
-    h2 {
-        font-family: var(--heading-text);
-        color: var(--bright-pink);
-        font-size: clamp(4rem, 8vw, 8rem);
-        margin: 2rem 3rem 0 0;
-        text-shadow: var(--text-shadow3);
-        text-align: right;
-        letter-spacing: 0.5rem;
-    }
-    .p-container {
-        background-color: var(--transparent-pink);
-        max-width: 35rem;
-        font-weight: 700;
-        margin: 1rem 2rem 2rem;
-        border-radius: 0.25rem;
-        box-shadow: -1rem -1rem 0px 0px var(--transparent-white);
-        border: 1px solid var(--transparent-white-2);
-    }
-    p {
-        padding: 2.5rem 2rem;
-        margin: 0;
-        font-size: 1.1rem;
-        line-height: 2.5rem;
+    div.intro-message {
+        margin-right: 5rem;
+
+        h2 {
+            font-family: var(--heading-text);
+            color: var(--bright-pink);
+            font-size: clamp(4rem, 8vw, 8rem);
+            margin: 2rem 3rem 0 0;
+            text-shadow: var(--text-shadow3);
+            text-align: right;
+            letter-spacing: 0.5rem;
+        }
+        .p-container {
+            background-color: var(--transparent-pink);
+            max-width: 35rem;
+            font-weight: 700;
+            margin: 1rem 2rem 2rem;
+            border-radius: 0.25rem;
+            box-shadow: -1rem -1rem 0px 0px var(--transparent-white);
+            border: 1px solid var(--transparent-white-2);
+        }
+        p {
+            padding: 2.5rem 2rem;
+            margin: 0;
+            font-size: 1.1rem;
+            line-height: 2.5rem;
+        }
     }
 }
 
@@ -199,7 +202,7 @@
     background-position: 100% 50%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
 
 .bottom-content-wrapper {
@@ -215,16 +218,24 @@
 .bottom-content-top h2 {
     font-family: var(--heading-text);
     color: var(--pink-dark2);
-    font-size: clamp(4rem, 5vw, 8rem);
+    font-size: clamp(4rem, 8vw, 8rem);
     letter-spacing: 0.25rem;
-    margin: 0.5rem auto 0;
+    margin: 2rem auto;
     text-shadow: var(--text-shadow3);
     text-align: center;
 }
 
+section.bottom-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 80%;
+}
+
 a.main-card {
     text-decoration: none;
-    margin: 2rem auto 1rem;
+    margin: 4rem 1rem;
     padding: 0;
     border-top: 1rem solid var(--white);
     border-left: 1rem solid var(--white);
